fixed navigation spacing

--- a/scss/header/_navigation.scss
+++ b/scss/header/_navigation.scss
@@ -19,6 +19,9 @@
         background: transparent;
       }
     }
+    @media(min-width:640px) and (max-width:824px) {
+      font-size: 16px;
+    }
   }
 
   ul {
@@ -50,6 +53,9 @@
       &:hover {
         color: $accent-color;
       }
+    }
+    @media(min-width:640px) and (max-width:824px) {
+      padding: 7px 11px 7px 0;
     }
   }
 
